# Plankton

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  main.cpp
gui/docs/: plan.md  wireframes.md
gui/src/: ConfigAssembler.cpp  ConfigAssembler.h  InitialConditions.cpp  InitialConditions.h  InitialConditionsPage.cpp  InitialConditionsPage.h  KineticParameters.cpp  KineticParameters.h  KineticParametersPage.cpp  KineticParametersPage.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PlanktonWizard.cpp  PlanktonWizard.h  PlanktonWizardPage.h  ReactorGeometry.cpp  ReactorGeometry.h  ReactorGeometryPage.cpp  ReactorGeometryPage.h  Results.cpp  Results.h  ResultsPage.cpp  ResultsPage.h  SimulationRunner.cpp  SimulationRunner.h
plankton/: CMakeLists.txt  Monod.cpp  Monod.h  Monod_tests.cpp  main.cpp
plankton/inc/: BeerLambert.h  CsvExport.h  Monod.h  MonodParameters.h  MonodState.h  ReactorGeometry.h  Simulation.h  SimulationParameters.h  SimulationRecord.h
plankton/src/: BeerLambert.cpp  CsvExport.cpp  CsvExport_tests.cpp  Monod.cpp  Monod_Mortality_tests.cpp  Monod_tests.cpp  ReactorGeometry.cpp  ReactorGeometry_tests.cpp  Simulation.cpp
